adds post get endpoint with nested comments
