# internal/model/comment.go
@@ -18,30 +18,8 @@ type CommentModel struct {
 var selectCommentByIDQuery string
 
 func (commentModel *CommentModel) GetByID(postID int) (dtypes.CommentData, error) {
-	var id int
-	var post_id int
-	var user_id int
-	var depth int
-	var parent_comment_id sql.NullInt64
-	var content string
-	var image string
-	var like_count int
-	var retweet_count int
-	var bookmark_count int
-	var impressions int
-	var created_at string
-	var updated_at string
-	var author_username string
-	var author_display_name string
-	var author_avatar string
-
-	err := commentModel.db.
-		QueryRow(selectCommentByIDQuery, postID).
-		Scan(
-			&id, &post_id, &user_id, &depth, &parent_comment_id, &content,
-			&image, &like_count, &retweet_count, &bookmark_count, &impressions,
-			&created_at, &updated_at, &author_username, &author_display_name,
-			&author_avatar)
+	row := commentModel.db.QueryRow(selectCommentByIDQuery, postID)
+	commentData, err := parseCommentQueryRow(row)
 
 	if err != nil {
 		if errors.Is(err, sql.ErrNoRows) {
@@ -51,30 +29,28 @@ func (commentModel *CommentModel) GetByID(postID int) (dtypes.CommentData, error
 		return dtypes.CommentData{}, err
 	}
 
-	author := dtypes.Author{
-		Username:    author_username,
-		DisplayName: author_display_name,
-		Avatar:      author_avatar,
-	}
-
-	commentData := dtypes.CommentData{
-		ID:              id,
-		PostID:          post_id,
-		UserID:          user_id,
-		Depth:           depth,
-		ParentCommentID: int(parent_comment_id.Int64),
-		Content:         content,
-		Image:           image,
-		LikeCount:       like_count,
-		RetweetCount:    retweet_count,
-		BookmarkCount:   bookmark_count,
-		Impressions:     impressions,
-		CreatedAt:       created_at,
-		UpdatedAt:       updated_at,
-		Author:          author,
-	}
-
 	return commentData, nil
+}
+
+//go:embed queries/select-comment-by-post-id.sql
+var selectCommentByPostIDQuery string
+
+func (commentModel *CommentModel) GetByPostID(postID int) ([]dtypes.CommentData, error) {
+	result, err := commentModel.db.Query(selectCommentByPostIDQuery, postID)
+	if err != nil && err != sql.ErrNoRows {
+		return []dtypes.CommentData{}, err
+	}
+
+	var comments []dtypes.CommentData
+	for result.Next() {
+		comment, err := parseCommentQueryRow(result)
+		if err != nil {
+			logger.LogError("CommentModel.GetByPostID() error scanning comment row:" + err.Error())
+		}
+		comments = append(comments, comment)
+	}
+
+	return comments, nil
 }
 
 //go:embed queries/create-post-comment.sql
@@ -121,6 +97,60 @@ func (commentModel *CommentModel) NewCommentReply(commentInput dtypes.CommentInp
 
 	return rowID, nil
 
+}
+
+func parseCommentQueryRow(rowScanner dbutils.RowScanner) (dtypes.CommentData, error) {
+	var id int
+	var post_id int
+	var user_id int
+	var depth int
+	var parent_comment_id sql.NullInt64
+	var content string
+	var image string
+	var like_count int
+	var retweet_count int
+	var bookmark_count int
+	var impressions int
+	var created_at string
+	var updated_at string
+	var author_username string
+	var author_display_name string
+	var author_avatar string
+
+	err := rowScanner.Scan(
+		&id, &post_id, &user_id, &depth, &parent_comment_id, &content,
+		&image, &like_count, &retweet_count, &bookmark_count, &impressions,
+		&created_at, &updated_at, &author_username, &author_display_name,
+		&author_avatar)
+
+	if err != nil {
+		return dtypes.CommentData{}, err
+	}
+
+	author := dtypes.Author{
+		Username:    author_username,
+		DisplayName: author_display_name,
+		Avatar:      author_avatar,
+	}
+
+	commentData := dtypes.CommentData{
+		ID:              id,
+		PostID:          post_id,
+		UserID:          user_id,
+		Depth:           depth,
+		ParentCommentID: int(parent_comment_id.Int64),
+		Content:         content,
+		Image:           image,
+		LikeCount:       like_count,
+		RetweetCount:    retweet_count,
+		BookmarkCount:   bookmark_count,
+		Impressions:     impressions,
+		CreatedAt:       created_at,
+		UpdatedAt:       updated_at,
+		Author:          author,
+	}
+
+	return commentData, nil
 }
 
 func NewCommentModel(db *sql.DB) *CommentModel {
